# DoomScroller

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  HOW_TO_PLAY.md  PLAN.md
.github/workflows/: ci.yml
assets/levels/: arena.dslv  arena.txt  crossfire.dslv  crossfire.txt  gauntlet.dslv  gauntlet.txt
assets/scripts/: boss.lua  enemy_ai.lua  hooks.lua  level.lua  parry.lua  pickups.lua  wave.lua  waves.lua
assets/sfx/: README.md
cmake/: CompileSlang.cmake  Slang.cmake
docs/: Doxyfile  bench-agent-prompt.md  bench-task48-verdict.md  lua_doxygen_filter.py  phase4-bench-plan.md
engine/: CMakeLists.txt
engine/include/engine/: AudioSystem.h  Bc7Cook.h  BloomKernel.h  BossLogic.h  BuildConfig.h.in  Camera.h  CaptureConfig.h  ClusterGrid.h  CombatFeedback.h  Engine.h  Frustum.h  GameFeel.h  GltfExtract.h  GoldenImage.h  HighScore.h  InputMap.h  InstanceBatch.h  LevelFormat.h  LevelGen.h  LevelLoader.h  LevelTextParser.h  MaterialTable.h  MeshLoader.h  MetaProgression.h  MovementTech.h  ParryTech.h  ParticleSystem.h  Paths.h  PbrBrdf.h  PhysicsWorld.h  PickupSystem.h  PlayerController.h  ProceduralTextures.h  Profiler.h  QualityProfile.h  RenderGraph.h  SaveData.h  ScriptSystem.h  SettingsStore.h  ShaderLoader.h  (+12 more)
engine/include/engine/ecs/: Components.h  EnemyArchetype.h  EnemySystem.h  Hazard.h  ProjectileSystem.h  RenderSystem.h
engine/include/engine/rhi/: IRHICommandList.h  IRHIDevice.h  RHITypes.h  TextureReadback.h
engine/include/engine/script/: LuaGlobal.h  LuaUserdata.h  LuaVec3.h
engine/src/: AudioSystem.cpp  Camera.cpp  Engine.cpp  GltfExtract.cpp  HighScore.cpp  LevelGen.cpp  LevelLoader.cpp  MeshLoader.cpp  ParticleSystem.cpp  Paths.cpp  PhysicsWorld.cpp  PlayerController.cpp  ProceduralTextures.cpp  ScriptSystem.cpp  ScriptSystemGameplay.cpp  ShaderLoader.cpp  ShaderWatcher.cpp  TextureManager.cpp  UISystem.cpp  WaveSystem.cpp  miniaudio_impl.cpp
engine/src/ecs/: EnemySystem.cpp  ProjectileSystem.cpp  RenderSystem.cpp
engine/src/rhi/sdl3/: SDL3Device.cpp  SDL3Device.h
engine/src/script/: LuaGlobal.cpp  LuaUserdata.cpp  LuaVec3.cpp
game/: CMakeLists.txt  Info.plist.in
game/src/: main.cpp
shaders/: blur.slang  mesh.slang  particle.slang  particle_sim.slang  point_shadow_depth.slang  post.slang  shadow_depth.slang  tonemap.slang  triangle.slang  ui.slang
tests/: CMakeLists.txt  smoke_main.cpp  test_archetype.cpp  test_bc7.cpp  test_bloom.cpp  test_boss.cpp  test_boss_lua.cpp  test_camera.cpp  test_capture_config.cpp  test_cluster.cpp  test_combat_feedback.cpp  test_components.cpp  test_dstex.cpp  test_economy.cpp  test_enemy_ai_lua.cpp  test_frustum.cpp  test_gamefeel.cpp  test_gltf_extract.cpp  test_golden_image.cpp  test_hazard.cpp  test_input.cpp  test_instancing.cpp  test_level_format.cpp  test_level_lua.cpp  test_level_parser.cpp  test_lights.cpp  test_lua_global.cpp  test_lua_vec3.cpp  test_material_table.cpp  test_metaprogression.cpp  test_movement.cpp  test_parry.cpp  test_parry_lua.cpp  test_particles.cpp  test_pbr.cpp  test_pickup.cpp  test_pickups_lua.cpp  test_procedural_textures.cpp  test_projectile.cpp  test_quality.cpp  (+15 more)
tests/fixtures/: triangle.gltf
tests/golden/: golden_startup_vulkan.ppm
tools/: CMakeLists.txt  asset_cook.cpp  level_convert.cpp
